[metadata]
name = nmtscore
version = 0.3.2
author = Jannis Vamvas
author_email = vamvas@cl.uzh.ch
description = A library of translation-based text similarity measures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZurichNLP/nmtscore
project_urls =
    Bug Tracker = https://github.com/ZurichNLP/nmtscore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    transformers<4.34  # https://github.com/ZurichNLP/nmtscore/issues/7
    sentencepiece
    tqdm
    sqlitedict

[options.extras_require]
prism =
    fairseq<=0.10.0
    numpy<1.24

[options.packages.find]
where = src
